Basic window and draw working

--- a/GeometrySFMLCore/Project1/Project1.vcxproj
+++ b/GeometrySFMLCore/Project1/Project1.vcxproj
@@ -127,13 +127,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="debug.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="sfml.cpp" />
+    <ClCompile Include="signal.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="debug.h" />
     <ClInclude Include="defines.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="sfml.h" />
+    <ClInclude Include="signal.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
